[GEOT-7764] Migrate GeoTools to Java 17
* Upgrade build for Java 17 as base Java version
  * Configure maven-enforcer-plugin to require Java 17
  * Configure maven-enforcer-plugin to require maven 3.8+ as done in GeoServer.
  * Remove cobertura-maven-plugin (modules/extension/xsd/**), as it is not compatible with Java 11+
  * Update maven-javadoc-plugin configuration to use legacyMode=true and not fail due to module-info.java not present.
* Upgrade github actions workflows to use Java 17, remove the linux_jdk11.yml workflow.
* Centralize plugin versions in the root pom's pluginManagement section
* Update docs for Java 17
* Add .mvn/jvm.config with necessary --add-exports and --add-opens for internal jdk.compiler packages.
  This ensures that build-time tools and compiler plugins (e.g., Error Prone, and others interacting with javac internals) can
  function correctly under Java 17's module system.
* Plugin version upgrades:
  * jacoco 0.8.7 -> 0.8.13
  * maven-checkstyle-plugin 3.3.0 -> 3.6.0
  * maven-compiler-plugin 3.11.0 -> 3.14.0
  * maven-javadoc-plugin 3.6.3 -> 3.11.2
* Upgrade errorprone to work with Java 17:
  * add suggested compiler args `-Xep:DeadException:WARN -Xep:GuardedBy:OFF`
  * Add additional errorprone exclusions and fix trivial errors
  * Use explict charset reading streams (IntelliJ)
  * Inner class can be static, by IntelliJ
  * Removing unnecessary parenthesis (intellij)

* Fix usage of varargs in GridCoverageReader/Writer

  GridCoverageReader.read() and GridCoverageWriter.write() were declared
  to receive `GeneralParameterValue... parameters` varargs but most
  classes in their hiearchy were still using `GeneralParameterValue[]`,
  which caused errors when compiling with `-Werror` and Java 17.

  Update to replace calls with null argument like `reader.read(null)` by
  `reader.read()` and avoid the "inon-varargs call of varargs method with
  inexact argument type for last parameter" errors.

  Update ImageMosaicReader, WorldImageWriter, and